Fix dark mode link underline color

--- a/src/_includes/index.css
+++ b/src/_includes/index.css
@@ -17,7 +17,7 @@
 		--color: var(--color_dark);
 		--border-color: #444;
 		--link-color: #fff;
-		--link-underline: rgba(255,255,255,.25);
+		--link-underline: rgba(255,255,255,.45);
 		--shadow-color: rgba(255, 255, 255, 0.25);
 	}
 }
